--- a/wp-content/themes/phoneResqNeat/assets/sass/layouts/_phoneresq.scss
+++ b/wp-content/themes/phoneResqNeat/assets/sass/layouts/_phoneresq.scss
@@ -545,7 +545,7 @@ select {
     }
     
     .two-col {
-        @include span-columns(6 of 12); 
+        @include span-columns(6 of 12);
     }
 
 article.intro {
@@ -1373,11 +1373,12 @@ footer#footer {
 
     .img-holder {
         position: relative;
-        min-height: 300px;
+        min-height: 210px;
+        background-color: red
 
         img {
-            position: absolute;
-            bottom: 0;
+            // position: absolute;
+            // bottom: 0;
             max-width: 250px;
             max-height: 300px;           
         }
@@ -1837,18 +1838,17 @@ footer#footer {
     }
 
     #repair {
-        article {
-            width: 100%;
+        .row {
+            margin: 0;
         }
-    
-        .img-holder img {
-            left: 50%;
-            right: 50%;
-            margin-left: -85px;
+        
+        // Makes filter row bottom margin smaller
+        .row.row-filter .two-col {
+            margin-bottom: 20px;
         }
 
         .two-col {
-            
+            margin-bottom: 50px;
 
             p, h2 {
                 text-align: center;
@@ -1860,6 +1860,20 @@ footer#footer {
                 margin-left: -24%;
             }
         }
+
+        article {
+            width: 100%;
+        }
+    
+        .img-holder img {
+            margin: 0 auto;
+            display: block;
+        }
+
+        #filter-model div {
+            margin-bottom: 10px;
+        }
+
     }
 
     // Section Intro text articles
@@ -1909,10 +1923,6 @@ footer#footer {
     display: none;
 }
 
-
-// .product-details img {
-//     display: none;
-// }
 
 
 
